--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.18.1",
+    "i18next": "^24.2.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.461.0",
     "motion": "^11.18.1",
@@ -33,13 +34,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.0.1",
     "shadcn": "^1.0.0",
     "table": "^6.9.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
