--- a/netlify.toml
+++ b/netlify.toml
@@ -1,21 +1,41 @@
-# example netlify.toml
+functionsDirectory = "C:\\Users\\hp\\OneDrive\\Desktop\\O\\Ghibaish-Website\\netlify\\functions"
+functionsDirectoryOrigin = "config-v1"
+plugins = []
+headers = []
+
+[functions]
+
+[functions."*"]
+
 [build]
-  command = "npm run build"
-  functions = "netlify/functions"
-  publish = "dist"
+publish = "C:\\Users\\hp\\OneDrive\\Desktop\\O\\Ghibaish-Website\\dist"
+publishOrigin = "config"
+commandOrigin = "config"
+command = "npm run build"
+functions = "C:\\Users\\hp\\OneDrive\\Desktop\\O\\Ghibaish-Website\\netlify\\functions"
 
-  ## Uncomment to use this redirect for Single Page Applications like create-react-app.
-  ## Not needed for static site generators.
-  #[[redirects]]
-  #  from = "/*"
-  #  to = "/index.html"
-  #  status = 200
+[build.environment]
 
-  ## (optional) Settings for Netlify Dev
-  ## https://github.com/netlify/cli/blob/main/docs/netlify-dev.md#project-detection
-  #[dev]
-  #  command = "yarn start" # Command to start your dev server
-  #  port = 3000 # Port that the dev server will be listening on
-  #  publish = "dist" # Folder with the static content for _redirect file
+[build.processing]
 
-  ## more info on configuring this file: https://ntl.fyi/file-based-build-config
+[build.processing.css]
+
+[build.processing.html]
+
+[build.processing.images]
+
+[build.processing.js]
+
+[build.services]
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200.0
+force = false
+
+[redirects.query]
+
+[redirects.conditions]
+
+[redirects.headers]
