--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@fontsource/ibm-plex-sans-arabic": "^5.2.5",
     "@hookform/resolvers": "^3.10.0",
     "@material-tailwind/react": "^2.1.10",
     "@radix-ui/react-label": "^2.1.1",
