fix admin panel issues

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,7 +11,9 @@
       "jsx": "react-jsx",
       "esModuleInterop": true,
       "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+      "forceConsistentCasingInFileNames": true,
+      "lib": ["ES2022", "DOM"],
+    
     },
     "include": ["src"],
     "exclude": ["node_modules"]
