--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "md5": "^2.3.0",
     "motion": "^11.18.1",
     "netlify": "^13.2.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -60,6 +61,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
+    "supabase": "^2.48.3",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
     "vite-plugin-svgr": "^4.3.0"
